src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <controllingField>Organization__c</controllingField>
            <picklistValues>
                <fullName>25/25/25/25 Monthly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25/25/25/25 Quarterly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33/33/33 Monthly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33/33/33 Quarterly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40/30/30 Monthly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40/30/30 Quarterly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50/25/25 Monthly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50/25/25 Quarterly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50/50 Monthly Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi Mon - 12 Months Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi Mon - 6 Months Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent N/ Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent Upsell N/ Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent W/ Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly - 6 Months Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly - 9 Months Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Billing - 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Schedule 10-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Schedule 10-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Schedule 11-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Schedule 11-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Schedule 12-12</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method_text__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <controllingField>Organization__c</controllingField>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorldPay (PPC only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDC/ECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit / Credit Card Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT/RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Deposit-Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Term_text__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <controllingField>Organization__c</controllingField>
            <picklistValues>
                <fullName>30 days + EOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days + Month End +1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days + EOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days + Month End +1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days + Month End +1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM + 120 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM + 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM + 45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM + 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM + 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net120 (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 150 Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15-10-2%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15-15-3%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 180 Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30-30-3%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45 (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60 (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 75 (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 80 (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>